stop jumping because of vertical scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ body {
   padding-top: 0px;
   padding-bottom: 0px;
   margin-bottom: 60px;
+  overflow-y: scroll;
 }
 
 @media only screen and (min-width: 480px) {
